fixed layout bug in mobile game nav

--- a/styles/style.css
+++ b/styles/style.css
@@ -717,7 +717,8 @@ footer {
   }
 
   .gameNavPosition {
-    top: 90%;
+    top: auto;
+    bottom: 0;
   }
 
   .heroCardPosition {
